# mem-alloc

./: .gitignore  CMakeLists.txt  README.md  bench_latest.txt
.github/workflows/: ci.yml
bench/: bench_main.cpp
include/memalloc/: memalloc.h
src/: api.cpp  arena.cpp  arena.h  internal.h  platform.h  slab.cpp  slab.h  stats.cpp  stats.h  tls_cache.cpp  tls_cache.h  vm_region.cpp
tests/: test_basic.cpp  test_coalesce.cpp  test_threaded.cpp
